Updated Logs Stratigy, added interceptor in user service, made changes for removing lint errors, updated the JWT lib jar for better performance and logging